Try to fix bug blurry text in safari

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,6 +9,8 @@ html {
   scrollbar-width: none;
   scroll-behavior: smooth;
   overflow: hidden;
+  -webkit-backface-visibility: hidden;
+  -webkit-font-smoothing: subpixel-antialiased;
 }
 
 ::-webkit-scrollbar {
@@ -829,7 +831,7 @@ html {
   bottom: 0;
 }
 
-@media only screen and (max-device-width: 1366px) {
+@media only screen and (max-device-width: 1200px) {
   .about {
     display: block;
     left: 1%;
@@ -900,8 +902,7 @@ html {
   .circle:active {
     transform-origin: center center;
     transform: translate(-50%, -50%, 0) scale(1);
-    backface-visibility: hidden;
-    -webkit-font-smoothing: subpixel-antialiased;
+
   }
 
   .contact-me {
